--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,8 +1,6 @@
 @import '../../styles/main.scss';
 
 .card {
-  font-family: $ff-montserrat;
-  width: 400px;
   color: $color-dark-grey;
   background-color: $color-white;
   border: 1px solid $color-light-grey;
@@ -44,10 +42,29 @@
   }
 
   &__link {
-    display: flex;
+    position: relative;
+    display: inline-flex;
     align-items: center;
     font-weight: $fw-700;
     line-height: 150%;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0; 
+      bottom: -5px;
+      width: 0;
+      height: 1.5px;
+      background-color: $color-dark-grey;
+    }
+    
+    &:hover:before {
+      width: 100%;
+    }
+    
+    &::before {
+      transition: width 0.35s;
+    }
   }
   
   &__icon-arrow {
