--- a/src/pages/articlePage/ArticlePage.scss
+++ b/src/pages/articlePage/ArticlePage.scss
@@ -3,7 +3,7 @@
 .article {
   position: relative;
   padding-top: 150px;
-  max-width: 1440;
+  max-width: 1920px;
   margin: 0 auto;
   font-family: $ff-montserrat;
 
