--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -12,7 +12,7 @@
 
   &__input {
     height: 50px;
-    width: 600px;
+    max-width: 600px;
     margin-bottom: 40px;
     padding-left: 60px;
     font-family: $ff-montserrat;
